@@ -11,6 +11,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
 
+import javax.annotation.Nonnull;
+
 import static com.bashpile.shell.BashShell.runAndJoin;
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -25,8 +27,12 @@ public class BashpileMainIntegrationTest extends BashpileTest {
 
     private static final Logger log = LogManager.getLogger(BashpileMainIntegrationTest.class);
 
+    private static @Nonnull ExecutionResults runWithSdkMan(@Nonnull final String command) throws IOException {
+        return runAndJoin(". ./bin/sdkman-include.lib\n%s".formatted(command));
+    }
+
     @Test
-    @Timeout(10)
+    @Timeout(15)
     @Order(10)
     public void bpcTranspiles() throws IOException {
         log.info("In bpcTranspiles test");
@@ -34,16 +40,38 @@ public class BashpileMainIntegrationTest extends BashpileTest {
         final String translatedFilename = "src/test/resources/testrigData";
         final String command = "target/bpc src/test/resources/testrigData.bps";
         try {
-            final ExecutionResults results = runAndJoin(command);
+            final ExecutionResults results = runWithSdkMan(command);
             log.debug("Output text:\n{}", results.stdout());
 
             assertSuccessfulExitCode(results);
             final List<String> lines = results.stdoutLines();
-            final String lastLine = lines.get(lines.size() - 1);
+            final String lastLine = lines.getLast();
             assertTrue(lastLine.endsWith(translatedFilename),
                     "Expected last line to end with %s but was %s".formatted(translatedFilename, lastLine));
         } finally {
             Files.deleteIfExists(Path.of(translatedFilename));
+        }
+    }
+
+    @Test
+    @Timeout(15)
+    @Order(11)
+    public void bpcWithBadCompileMakesNoFiles() throws IOException {
+        log.info("In bpcTranspiles test");
+
+        final Path translatedFilename = Path.of("command.bash");
+        final String command = "target/bpc -c '@'";
+        try {
+            final ExecutionResults results = runWithSdkMan(command);
+            log.debug("Output text:\n{}", results.stdout());
+
+            assertFailedExitCode(results);
+            final List<String> lines = results.stdoutLines();
+            final String lastLine = lines.getLast();
+            assertFalse(lastLine.endsWith(translatedFilename.toString()),
+                    "Expected last line to end with %s but was %s".formatted(translatedFilename, lastLine));
+        } finally {
+            Files.deleteIfExists(translatedFilename);
         }
     }
 
@@ -55,14 +83,14 @@ public class BashpileMainIntegrationTest extends BashpileTest {
 
         // run with our local (not installed) bpr
         final String command = "target/bpr src/test/resources/scripts/bprShebang.bps";
-        final ExecutionResults results = runAndJoin(command);
+        final ExecutionResults results = runWithSdkMan(command);
         log.debug("Output text:\n{}", results.stdout());
 
         assertSuccessfulExitCode(results);
     }
 
     @Test
-    @Timeout(10)
+    @Timeout(15)
     @Order(20)
     public void noSubCommandWithNoExtensionTranspiles() throws IOException {
         log.info("In noSubCommandWithNoExtensionTranspiles");
@@ -71,13 +99,13 @@ public class BashpileMainIntegrationTest extends BashpileTest {
         final String command = "target/bpc src/test/resources/testrigData2.bps";
         Path translatedPath = Path.of(translatedFilename);
         Files.deleteIfExists(translatedPath);
-        final ExecutionResults results = runAndJoin(command);
+        final ExecutionResults results = runWithSdkMan(command);
         try {
             log.debug("Output text:\n{}", results.stdout());
 
             assertSuccessfulExitCode(results);
             final List<String> lines = results.stdoutLines();
-            assertTrue(lines.get(lines.size() - 1).endsWith(translatedFilename));
+            assertTrue(lines.getLast().endsWith(translatedFilename));
         } finally {
             Files.deleteIfExists(translatedPath);
         }
@@ -90,7 +118,7 @@ public class BashpileMainIntegrationTest extends BashpileTest {
         log.info("In noSubCommandWithMissingFileFails");
 
         final String command = "target/bpc src/test/resources/testrigData.fileDoesNotExist";
-        final ExecutionResults results = runAndJoin(command);
+        final ExecutionResults results = runWithSdkMan(command);
         log.debug("Output text:\n{}", results.stdout());
 
         assertFailedExitCode(results);
@@ -105,16 +133,16 @@ public class BashpileMainIntegrationTest extends BashpileTest {
 
         final String translatedFilename = "src/test/resources/testrigData2.example.bps";
         final String command = "target/bpc src/test/resources/testrigData2.bps --outputFile " + translatedFilename;
-        ExecutionResults results = runAndJoin(command);
+        ExecutionResults results = runWithSdkMan(command);
         try {
             log.debug("Output text:\n{}", results.stdout());
 
             assertSuccessfulExitCode(results);
             List<String> lines = results.stdoutLines();
-            assertTrue(lines.get(lines.size() - 1).endsWith(translatedFilename));
+            assertTrue(lines.getLast().endsWith(translatedFilename));
 
             // 2nd run to verify overwrites OK
-            results = runAndJoin(command);
+            results = runWithSdkMan(command);
             assertSuccessfulExitCode(results);
         } finally {
             Files.deleteIfExists(Path.of(translatedFilename));
@@ -131,7 +159,7 @@ public class BashpileMainIntegrationTest extends BashpileTest {
         final Path defaultOutputFile = Path.of("src/test/resources/scripts/overwriteCheck");
         assertTrue(Files.exists(defaultOutputFile), "Default output file does not exist");
         final String command = "target/bpr " + bashpileFilename;
-        final ExecutionResults results = runAndJoin(command);
+        final ExecutionResults results = runWithSdkMan(command);
         log.debug("Output text:\n{}", results.stdout());
 
         assertFailedExitCode(results);
@@ -145,7 +173,7 @@ public class BashpileMainIntegrationTest extends BashpileTest {
 
         // run with our local (not installed) bpr
         final String command = "target/bpr -c \"print('Hello World')\"";
-        final ExecutionResults results = runAndJoin(command);
+        final ExecutionResults results = runWithSdkMan(command);
         log.debug("Output text:\n{}", results.stdout());
 
         assertSuccessfulExitCode(results);
@@ -161,12 +189,12 @@ public class BashpileMainIntegrationTest extends BashpileTest {
 
         // run with our local (not installed) bpr
         final String command = "echo \"print('Hello World')\" | target/bpc -c";
-        final ExecutionResults results = runAndJoin(command);
+        final ExecutionResults results = runWithSdkMan(command);
         log.debug("Output text:\n{}", results.stdout());
 
         assertSuccessfulExitCode(results);
         // last line is the created filename
-        final String filename = results.stdoutLines().get(results.stdoutLines().size() - 1);
+        final String filename = results.stdoutLines().getLast();
         Files.deleteIfExists(Path.of(filename));
     }
 
@@ -178,7 +206,7 @@ public class BashpileMainIntegrationTest extends BashpileTest {
 
         // run with our local (not installed) bpr
         final String command = "echo \"print('Hello World')\" | target/bpr -c";
-        final ExecutionResults results = runAndJoin(command);
+        final ExecutionResults results = runWithSdkMan(command);
         log.debug("Output text:\n{}", results.stdout());
 
         assertSuccessfulExitCode(results);
@@ -195,7 +223,7 @@ public class BashpileMainIntegrationTest extends BashpileTest {
 
         // run with our local (not installed) bpr
         final String command = "cd ..; echo \"print('Hello World')\" | homebrew-bashpile/target/bpr -c";
-        final ExecutionResults results = runAndJoin(command);
+        final ExecutionResults results = runWithSdkMan(command);
         log.debug("Output text:\n{}", results.stdout());
 
         assertSuccessfulExitCode(results);
@@ -214,7 +242,7 @@ public class BashpileMainIntegrationTest extends BashpileTest {
         // run with our local (not installed) bpr
         final String command =
                 "cd ..; echo \"print('Hello World')\" | homebrew-bashpile/target/bpr --outputFile command81 -c";
-        final ExecutionResults results = runAndJoin(command);
+        final ExecutionResults results = runWithSdkMan(command);
         log.debug("Output text:\n{}", results.stdout());
 
         assertSuccessfulExitCode(results);
@@ -233,7 +261,7 @@ public class BashpileMainIntegrationTest extends BashpileTest {
         // run with our local (not installed) bpr
         final String command =
                 "cd ..; echo \"print('Hello World')\" | homebrew-bashpile/target/bpc -";
-        final ExecutionResults results = runAndJoin(command);
+        final ExecutionResults results = runWithSdkMan(command);
         log.debug("Output text:\n{}", results.stdout());
 
         assertSuccessfulExitCode(results);
@@ -251,7 +279,7 @@ public class BashpileMainIntegrationTest extends BashpileTest {
         // run with our local (not installed) bpr
         final String command =
                 "cd ..; echo \"print('Hello World')\" | homebrew-bashpile/target/bpc --outputFile dashOutput.bash -";
-        final ExecutionResults results = runAndJoin(command);
+        final ExecutionResults results = runWithSdkMan(command);
         log.debug("Output text:\n{}", results.stdout());
 
         assertSuccessfulExitCode(results);
@@ -272,7 +300,7 @@ public class BashpileMainIntegrationTest extends BashpileTest {
         // run with our local (not installed) bpr
         final String command =
                 "cd ..; echo \"print('Hello World')\" | homebrew-bashpile/target/bpr -";
-        final ExecutionResults results = runAndJoin(command);
+        final ExecutionResults results = runWithSdkMan(command);
         log.debug("Output text:\n{}", results.stdout());
 
         assertSuccessfulExitCode(results);
@@ -288,7 +316,7 @@ public class BashpileMainIntegrationTest extends BashpileTest {
 
         // run with our local (not installed) bpr
         final String command = "target/bpr";
-        final ExecutionResults results = runAndJoin(command);
+        final ExecutionResults results = runWithSdkMan(command);
         log.debug("Output text:\n{}", results.stdout());
 
         assertFailedExitCode(results);
@@ -303,11 +331,27 @@ public class BashpileMainIntegrationTest extends BashpileTest {
         log.info("In bpr -c fails gracefully");
 
         final String command = "target/bpr -c \"# echo\"";
-        final ExecutionResults results = runAndJoin(command);
+        final ExecutionResults results = runWithSdkMan(command);
 
         assertFailedExitCode(results);
         assertFalse(results.stdout().contains("No such file or directory"));
         // set -e text
         assertFalse(results.stdout().contains("Error (exit code 1) found on line "));
+    }
+
+    @Test
+    @Timeout(20)
+    @Order(110)
+    public void bprDashFWorks() throws IOException {
+        log.info("In bpr -f works");
+
+        final String command = "target/bpr -fc \"ls\"";
+        final ExecutionResults results = runWithSdkMan(command);
+
+        assertSuccessfulExitCode(results);
+        assertFalse(results.stdout().contains("No such file or directory"));
+        assertFalse(results.stdout().contains("Error (exit code 1) found on line "));
+        // TODO reenable after verbose mode implemented (message from bpc suppressed)
+//        assertTrue(results.stdout().contains("shfmt"), "Formatting program (shfmt) not run.");
     }
 }
