@@ -1,30 +1,30 @@
 package com.bashpile.maintests;
 
-import com.bashpile.Strings;
-import com.bashpile.shell.ExecutionResults;
-import org.junit.jupiter.api.MethodOrderer;
-import org.junit.jupiter.api.Order;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.TestMethodOrder;
-
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
 
+import com.bashpile.Strings;
+import com.bashpile.shell.ExecutionResults;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.junit.jupiter.api.Order;
+import org.junit.jupiter.api.Test;
+
 import static org.junit.jupiter.api.Assertions.*;
 
 @Order(50)
-@TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 public class ShellStringBashpileTest extends BashpileTest {
 
     /** May not exist if run with 'clean' step */
     private final static String jarPath = "target/bashpile.jar";
 
+    private final static Logger LOG = LogManager.getLogger(ShellStringBashpileTest.class);
+
     /**
      * Simple one word command
      */
     @Test
-    @Order(10)
     public void runLsWorks() {
         final ExecutionResults results = runText("#(ls)");
         assertSuccessfulExitCode(results);
@@ -35,7 +35,6 @@ public class ShellStringBashpileTest extends BashpileTest {
      * Command with arguments
      */
     @Test
-    @Order(20)
     public void runEchoWorks() {
         final ExecutionResults results = runText("#(echo hello command object)");
         assertSuccessfulExitCode(results);
@@ -43,14 +42,12 @@ public class ShellStringBashpileTest extends BashpileTest {
     }
 
     @Test
-    @Order(30)
     public void runInvalidCommandHadBadExitCode() {
         final ExecutionResults results = runText("#(invalid_command_example_for_testing)");
         assertFailedExitCode(results);
     }
 
     @Test
-    @Order(31)
     public void explicitErrorExitCodePropagates() {
         final ExecutionResults results = runText("""
                 #(
@@ -67,7 +64,6 @@ public class ShellStringBashpileTest extends BashpileTest {
     }
 
     @Test
-    @Order(40)
     public void runEchoParenthesisWorks() {
         final ExecutionResults results = runPath(Path.of("runEchoParenthesis.bps"));
         assertSuccessfulExitCode(results);
@@ -75,7 +71,6 @@ public class ShellStringBashpileTest extends BashpileTest {
     }
 
     @Test
-    @Order(41)
     public void shellStringInAssignmentWorksWithoutUnnesting() {
         final ExecutionResults results = runText("""
                 jarPath: str = #(dirname "${BASH_SOURCE:-}") + "/bashpile.jar"
@@ -83,11 +78,10 @@ public class ShellStringBashpileTest extends BashpileTest {
                 """);
         assertFalse(results.stdin().contains("__bp"));
         assertSuccessfulExitCode(results);
-        assertTrue(Strings.isNotEmpty(results.stdoutLines().get(0)));
+        assertTrue(Strings.isNotEmpty(results.stdoutLines().getFirst()));
     }
 
     @Test
-    @Order(50)
     public void nestedShellStringsWork() {
         final ExecutionResults results = runText("#(cat \"#(printf \"src/test/resources/testdata.txt\")\")");
         assertSuccessfulExitCode(results);
@@ -95,7 +89,6 @@ public class ShellStringBashpileTest extends BashpileTest {
     }
 
     @Test
-    @Order(51)
     public void nestedShellStringAndCommandSubstitutionWorks() {
         final ExecutionResults results = runText("#(cat \"$(printf \"src/test/resources/testdata.txt\")\")");
         assertSuccessfulExitCode(results);
@@ -103,7 +96,6 @@ public class ShellStringBashpileTest extends BashpileTest {
     }
 
     @Test
-    @Order(60)
     public void shellStringsWithHashWork() {
         final ExecutionResults results = runText("#(echo '#')");
         assertSuccessfulExitCode(results);
@@ -111,7 +103,6 @@ public class ShellStringBashpileTest extends BashpileTest {
     }
 
     @Test
-    @Order(61)
     public void shellStringsInAssignWorks() {
         final ExecutionResults results = runText("""
                 _sha256sum  : str = #(echo sha256sumValue)
@@ -121,7 +112,6 @@ public class ShellStringBashpileTest extends BashpileTest {
     }
 
     @Test
-    @Order(70)
     public void shellStringInCalcWorks() {
         final String bashpile = """
                 print(1 + #(expr 1 + 1):int)
@@ -132,7 +122,6 @@ public class ShellStringBashpileTest extends BashpileTest {
     }
 
     @Test
-    @Order(80)
     public void shellStringInCalcWithEscapesWorks() {
         final String bashpile = """
                 print(#(printf "NCC-1701") + "\\n" + "\\n")
@@ -143,7 +132,6 @@ public class ShellStringBashpileTest extends BashpileTest {
     }
 
     @Test
-    @Order(90)
     public void shellStringWithEscapesWorks() {
         final String bashpile = """
                 #(export IFS=$'\t')
@@ -155,7 +143,6 @@ public class ShellStringBashpileTest extends BashpileTest {
     }
 
     @Test
-    @Order(91)
     public void shellStringWithEscapedNewlineWorks() {
         final String bashpile = """
                 #(export IFS=$'\t')
@@ -168,18 +155,16 @@ public class ShellStringBashpileTest extends BashpileTest {
     }
 
     @Test
-    @Order(100)
     public void shellStringErrorExitCodesTriggerStrictModeTrap() {
         final ExecutionResults results = runText("""
                 #(pwd)
                 #(ls non_existent_file)""");
         assertFailedExitCode(results);
         final List<String> lines = results.stdoutLines();
-        assertTrue(lines.get(lines.size() - 1).contains("ls non_existent_file"));
+        assertTrue(lines.getLast().contains("ls non_existent_file"));
     }
 
     @Test
-    @Order(110)
     public void shellStringWithSubshellWorks() {
         final ExecutionResults results = runText("""
                 #((which ls 1>/dev/null))""");
@@ -187,7 +172,6 @@ public class ShellStringBashpileTest extends BashpileTest {
     }
 
     @Test
-    @Order(111)
     public void shellStringWithStringFunctionWorks() {
         final ExecutionResults results = runText("""
                 function munge(input: str) -> str:
@@ -199,7 +183,6 @@ public class ShellStringBashpileTest extends BashpileTest {
     }
 
     @Test
-    @Order(112)
     public void shellStringWithDoubleStringFunctionWorks() {
         final ExecutionResults results = runText("""
                 function munge(input: str) -> str:
@@ -208,6 +191,7 @@ public class ShellStringBashpileTest extends BashpileTest {
                     ret: str = munge("Vulcan")
                     print(ret)
                 randoFunc()""");
+        LOG.debug("Bash translation was:\n{}", results.stdin());
         assertSuccessfulExitCode(results);
         assertEquals("Vulcan\n", results.stdout());
     }
@@ -215,7 +199,6 @@ public class ShellStringBashpileTest extends BashpileTest {
     // shellLine tests
 
     @Test
-    @Order(120)
     public void shellLineWorks() {
         final ExecutionResults results = runText("ls");
         assertSuccessfulExitCode(results);
@@ -223,22 +206,19 @@ public class ShellStringBashpileTest extends BashpileTest {
     }
 
     @Test
-    @Order(121)
     public void shellLineWithSpecialCharactersWorks() {
         final ExecutionResults results = runText("mkdir temp-test; touch temp-test/bashpile.txt; rm -fr temp-test");
         assertSuccessfulExitCode(results);
     }
 
     @Test
-    @Order(130)
     public void complexShellLineWorks() {
         final ExecutionResults results = runText("find . -maxdepth 1 -print0 | xargs ls 2>&1");
         assertSuccessfulExitCode(results);
         assertTrue(results.stdin().contains("xargs"));
     }
 
-    @Test()
-    @Order(140)
+    @Test
     public void javaShellLineWorks() {
         final ExecutionResults results = runText("""
                 jarPath: str = "%s"
@@ -247,8 +227,7 @@ public class ShellStringBashpileTest extends BashpileTest {
         assertTrue(results.stdin().contains("java"));
     }
 
-    @Test()
-    @Order(150)
+    @Test
     public void javaShellLineWithVariableWorks() {
         final ExecutionResults results = runText("""
                 jarPath: str = "%s"
@@ -257,8 +236,7 @@ public class ShellStringBashpileTest extends BashpileTest {
         assertTrue(results.stdin().contains("java"));
     }
 
-    @Test()
-    @Order(160)
+    @Test
     public void javaShellLineWithDoubleQuotedVariableWorks() {
         final ExecutionResults results = runText("""
                 jarPath: str = "%s"
@@ -267,8 +245,7 @@ public class ShellStringBashpileTest extends BashpileTest {
         assertTrue(results.stdin().contains("java"));
     }
 
-    @Test()
-    @Order(170)
+    @Test
     public void javaShellLineWithSingleQuotedVariableWorks() {
         final ExecutionResults results = runText("""
                 jarPath: str = "%s"
@@ -277,8 +254,7 @@ public class ShellStringBashpileTest extends BashpileTest {
         assertTrue(results.stdin().contains("java"));
     }
 
-    @Test()
-    @Order(180)
+    @Test
     public void shellLineInIfStatementWorks() {
         final ExecutionResults results = runText("""
                 jarPath: str = "%s"
@@ -289,8 +265,7 @@ public class ShellStringBashpileTest extends BashpileTest {
         assertTrue(results.stdout().contains("pom.xml"));
     }
 
-    @Test()
-    @Order(190)
+    @Test
     public void nestedShellLineInIfStatementWorks() {
         final ExecutionResults results = runText("""
                 jarPath: str = "%s"
